# GroCo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  GroupConv-Keras.ipynb  GroupConv_intro.ipynb  LICENSE  README.md  SpaceGroups.ipynb  example_MNIST.ipynb  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: build.yml  python-app.yml  sonar.yml  test.yml
docs/: conf.py  feature-b.rst
docs/source/: api.rst  conf.py  feature-a.rst  index.rst  symmetries.rst  theory.rst
docs/source/layers/: conv2d.rst  conv2d_transpose.rst  conv3d.rst  conv3d_transpose.rst  convolutional.rst  pooling.rst
geqco/groups/: __init__.py  group.py  wallpaper_groups.py
geqco/layers/: __init__.py  conv3d_transpose.py  group_transforms.py
geqco/utils/: __init__.py  equivariance.py  tensor_manips.py
groco/: groups.py  layers.py  pooling.py  test_groups.py  utils.py
groco/groups/: __init__.py  base.py  group.py  space_groups.py  test_base.py  test_space.py  test_wallpaper.py  wallpaper_groups.py
groco/layers/: __init__.py  conv.py  conv2d.py  conv2d_transpose.py  conv3d.py  conv3d_transpose.py  conv_2d.py  conv_3d.py  conv_base.py  group_transforms.py  padding.py  pooling.py  pooling_2d.py  pooling_3d.py  test_conv.py  test_conv_2d.py  test_conv_3d.py  test_padding.py  test_pooling.py
groco/utils/: __init__.py  equivariance.py  misc.py  tensor_manips.py  test_equivariance.py
notebooks/: GroupConv_intro.ipynb  SpaceGroups.ipynb  example_MNIST.ipynb
tests/: conv_test_base.py  custom_testcase.py  test_conv.py  test_conv_2d.py  test_conv_2d_transpose.py  test_conv_3d.py  test_conv_3d_transpose.py  test_model.py  test_padding.py  test_pooling.py  test_space.py  test_wallpaper.py
