[tool.poetry]
name = "groco"
version = "0.1.0"
description = "Keras implementation of group convolutions"
authors = ["Aron <aronpjansen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.16.1"
keras = "^3.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
