[tool.poetry]
name = "groco"
version = "0.1.0"
description = "Keras implementation of group convolutions"
authors = ["Aron <aronpjansen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
keras = "^3.0.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
Sphinx = "^7.2.6"

[tool.poetry.group.tensorflow]
optional = true

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.jax]
optional = true

[tool.poetry.group.tensorflow.dependencies]
tensorflow = "^2.16.1"

[tool.poetry.group.torch.dependencies]
torch = "^2.2.1"

[tool.poetry.group.jax.dependencies]
jax = "^0.4.25"
jaxlib = "^0.4.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
atomic = true
line_length = 100
profile = "black"
skip_gitignore = true
force_sort_within_sections = true

